--- a/src/app/features/sand-gravel-extraction-form/pages/sand-gravel-extraction-form-read/sand-gravel-extraction-form-read.component.html
+++ b/src/app/features/sand-gravel-extraction-form/pages/sand-gravel-extraction-form-read/sand-gravel-extraction-form-read.component.html
@@ -2,7 +2,7 @@
   <eco-card class="col-xs-12" title="{{ 'register-entry.miningVessel' | translate }}">
     <div>
       <a class="label">{{ 'register-entry.captainName' | translate }} : </a>
-      <a>{{registerEntry.captain.name}}</a>
+      <a>{{registerEntry.user.name}}</a>
     </div>
     <br />
     <div>
